--- a/Views/Bidones/Create.cshtml
+++ b/Views/Bidones/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model PracticaSupervisada.Models.Bidones
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Agregar";
 }
 
-<h1 id="contenedor-body">Create</h1>
+<h1 id="contenedor-body">Agregar</h1>
 
 <h4 id="contenedor-body">Bidones</h4>
 
