--- a/Views/Asistencias/Index.cshtml
+++ b/Views/Asistencias/Index.cshtml
@@ -21,23 +21,23 @@
 </p>
 <div>
     <form asp-action="Index" method="get">
-        Nombre <input type="text" value="@ViewBag.Busqnombre" name="Busqnombre" />
+        Nombre <input id="input-busqueda" type="text" value="@ViewBag.Busqnombre" name="Busqnombre" />
         Mes
-        <select name="Busqmes" value="@ViewBag.Busqmes">
+        <select id="input-busqueda" name="Busqmes" value="@ViewBag.Busqmes">
             <option value="0">Seleccione un mes</option>
             @for (int i = 1; i <= 12; i++)
             {
                 <option value="@i">@CultureInfo.CurrentCulture.DateTimeFormat.GetMonthName(i)</option>
             }
         </select>
-        Año <select value="@ViewBag.Busqanio" name="Busqanio" value="@DateTime.Now.Year" min="2000" max="@DateTime.Now.Year">
+        Año <select id="input-busqueda" value="@ViewBag.Busqanio" name="Busqanio" value="@DateTime.Now.Year" min="2022" max="@DateTime.Now.Year">
             <option value="0">Seleccione un año</option>
             @for (int i = 2020; i <= DateTime.Now.Year; i++)
             {
                 <option value="@i">@i</option>
             })
         </select>
-        <input type="submit" value="Filtrar" style="width:60px;" />
+        <input id="input-busqueda-conf" type="submit" value="Filtrar" />
     </form>
 
 </div>  
