--- a/wwwroot/css/PSstyle.css
+++ b/wwwroot/css/PSstyle.css
@@ -14,6 +14,7 @@
 
 #btn-pag {
     margin: 5px;
+    border-radius: 20%;
 }
 
 #txt-principal {
@@ -79,6 +80,16 @@
     width: 400px;
     height: 100px;
     font-size: 30px;
+    border-radius: 2%;
+    transition: transform 0.5s ease;
+}
+
+#btn-principal:hover {
+    transform: scale(1.1);
+}
+
+#btn-principal:active {
+    transform: scale(0.9);
 }
 
 @media only screen and (max-width: 1284px) {
@@ -228,5 +239,12 @@
     }
     #input-busqueda{
         width:100px;
+    }
+}
+
+@media only screen and (max-width: 485px) {
+    #btn-consultar-conf {
+        margin-top: 3px;
+        margin-left: 17px;
     }
 }
