--- a/Views/Bidones/Index.cshtml
+++ b/Views/Bidones/Index.cshtml
@@ -201,6 +201,6 @@
 
 <script>
     function confirmarEliminar(form) {
-        return confirm("¿Está seguro que desea eliminar este registro?");
+        return confirm("¿Está seguro/a que desea eliminar este registro?");
     }
 </script>
