--- a/Views/Asistencias/Edit.cshtml
+++ b/Views/Asistencias/Edit.cshtml
@@ -4,13 +4,14 @@
     ViewData["Title"] = "Editar asistencia";
 }
 
-<div id="contenedor-body">
-    <h1>Editar</h1>
+<div style="margin-top:100px;">
 
+    <div id="contenedor-body">
+    <h1>Editar</h1>
 </div>
-<h4 id="contenedor-body">Asistencia</h4>
-<hr />
-<div class="row" id="contenedor-body">
+    <h4 id="contenedor-body">Asistencia</h4>
+    <hr />
+    <div class="row" id="contenedor-body">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -22,17 +23,17 @@
             </div>
             <div class="form-group">
                 <label asp-for="Fecha" class="control-label"></label>
-                <input asp-for="Fecha" class="form-control" />
+                <input asp-for="Fecha" class="form-control" type="date"/>
                 <span asp-validation-for="Fecha" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Tiempo_Entrada" class="control-label"></label>
-                <input asp-for="Tiempo_Entrada" class="form-control" />
+                <input asp-for="Tiempo_Entrada" class="form-control" type="time"/>
                 <span asp-validation-for="Tiempo_Entrada" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Tiempo_Salida" class="control-label"></label>
-                <input asp-for="Tiempo_Salida" class="form-control" />
+                <input asp-for="Tiempo_Salida" class="form-control" type="time"/>
                 <span asp-validation-for="Tiempo_Salida" class="text-danger"></span>
             </div>
             <div class="form-group" id="contenedor-btn">
@@ -42,12 +43,12 @@
     </div>
 </div>
 
-<div id="contenedor-btn">
+    <div id="contenedor-btn">
     <form asp-action="index" method="get">
         <button id="btn-crear" class="btn-secondary">Regresar</button>
     </form>
 </div>
-
+</div>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
