--- a/Views/Asistencias/Index.cshtml
+++ b/Views/Asistencias/Index.cshtml
@@ -14,7 +14,9 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
 
-<div class="container-fluid">
+<div style="margin-top:100px;">
+
+    <div class="container-fluid">
     <div class="row mb-4">
         <div class="col-md-8">
             <h1>Planilla de asistencia</h1>
@@ -110,6 +112,7 @@
     </table>
 </div>
 
+</div>
 @section Scripts {
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
