--- a/Views/Bidones/Create.cshtml
+++ b/Views/Bidones/Create.cshtml
@@ -5,13 +5,15 @@
     string date = DateTime.Now.ToString("yyyy-MM-dd");
 }
 
-<h1 id="contenedor-body">Agregar</h1>
+<div style="margin-top:100px;">
 
-<h4 id="contenedor-body">Bidones</h4>
+    <h1 id="contenedor-body">Agregar</h1>
 
-<hr id="contenedor-body" />
+    <h4 id="contenedor-body">Bidones</h4>
 
-<div class="row" id="contenedor-body">
+    <hr id="contenedor-body" />
+
+    <div class="row" id="contenedor-body">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -37,12 +39,12 @@
     </div>
 </div>
 
-<div id="contenedor-btn">
+    <div id="contenedor-btn">
     <form asp-action="index" method="get">
         <button id="btn-crear" class="btn-secondary">Lista</button>
     </form>
 </div>
-
+</div>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
