--- a/Views/Bidones/Edit.cshtml
+++ b/Views/Bidones/Edit.cshtml
@@ -1,26 +1,28 @@
 ﻿@model PracticaSupervisada.Models.Bidones
 
 @{
-    ViewData["Title"] = "Editar";
+    ViewData["Title"] = "Editar bidone";
 }
 
-<h1 id="contenedor-body">Editar</h1>
+<div style="margin-top:100px;">
 
-<h4 id="contenedor-body">Bidones</h4>
-<hr id="contenedor-body" />
-<div class="row" id="contenedor-body">
+    <h1 id="contenedor-body">Editar</h1>
+
+    <h4 id="contenedor-body">Bidones</h4>
+    <hr id="contenedor-body" />
+    <div class="row" id="contenedor-body">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Fecha" class="control-label"></label>
-                <input asp-for="Fecha" class="form-control" />
+                <input asp-for="Fecha" class="form-control" type="date"/>
                 <span asp-validation-for="Fecha" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Cantidad" class="control-label"></label>
-                <input asp-for="Cantidad" class="form-control" />
+                <input asp-for="Cantidad" class="form-control" type="number"/>
                 <span asp-validation-for="Cantidad" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -35,12 +37,12 @@
     </div>
 </div>
 
-<div id="contenedor-btn">
+    <div id="contenedor-btn">
     <form asp-action="index" method="get">
         <button id="btn-crear" class="btn-secondary">Regresar</button>
     </form>
 </div>
-
+</div>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
