--- a/Views/Bidones/Index.cshtml
+++ b/Views/Bidones/Index.cshtml
@@ -12,8 +12,9 @@
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/2.2.2/css/buttons.dataTables.min.css">
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/responsive/2.2.9/css/responsive.dataTables.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+<div style="margin-top:100px;">
 
-<div class="container-fluid">
+    <div class="container-fluid">
     <div class="row mb-4">
         <div class="col-md-8">
             <h1>Control de agua</h1>
@@ -107,7 +108,7 @@
         </tbody>
     </table>
 </div>
-
+</div>
 @section Scripts {
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     
