--- a/wwwroot/css/PSstyle.css
+++ b/wwwroot/css/PSstyle.css
@@ -401,7 +401,7 @@
     }
 
     .navbar-toggler {
-        margin-left: auto; /* Empuja el botón hacia la derecha */
+        margin-left: auto;
     }
 
    {
