--- a/Views/Asistencias/Index.cshtml
+++ b/Views/Asistencias/Index.cshtml
@@ -17,29 +17,32 @@
 <div style="margin-top:100px;">
 
     <div class="container-fluid">
-    <div class="row mb-4">
-        <div class="col-md-8">
-            <h1>Planilla de asistencia</h1>
+        <div class="row mb-4">
+            <div class="col-md-8">
+                <h1>Planilla de asistencia</h1>
+            </div>
+            <div class="col-md-4 text-right">
+                <form asp-action="Create" method="get">
+                    <button class="btn btn-primary" type="submit">
+                        <i class="fas fa-plus"></i> Agregar Nuevo
+                    </button>
+                </form>
+            </div>
         </div>
-        <div class="col-md-4 text-right">
-            <form asp-action="Create" method="get">
-                <button class="btn btn-primary" type="submit">
-                    <i class="fas fa-plus"></i> Agregar Nuevo
-                </button>
-            </form>
-        </div>
-    </div>
 
-    <div class="filtros-container">
-        <form asp-action="Index" method="get" class="row g-3 align-items-center row col-12">
+        <div class="filtros-container">
+            <form asp-action="Index" method="get" class="row g-3 align-items-center row col-12">
                 <div class="row g-2">
                     <div class="col-12 col-md-auto">
                         <label for="Busqmes" class="form-label">Mes:</label>
                         <select id="Busqmes" class="form-select form-select-sm" name="Busqmes" onchange="this.form.submit()">
+                            @{
+                                var textInfo = new CultureInfo("es-AR").TextInfo;
+                            }
                             @for (int i = 1; i <= 12; i++)
                             {
                                 <option value="@i" selected="@(ViewBag.Busqmes != null && ViewBag.Busqmes == i)">
-                                    @CultureInfo.CurrentCulture.DateTimeFormat.GetMonthName(i)
+                                    @textInfo.ToTitleCase(CultureInfo.CurrentCulture.DateTimeFormat.GetMonthName(i))
                                 </option>
                             }
                         </select>
